# commercial-marketplace-offer-deploy

./: .gitignore  .pylintrc  Dockerfile  Dockerfile1.txt  LICENSE  Makefile  README.md  TestHarnessDockerfile  docker-compose-terraform.yml  docker-compose.production.yml  docker-compose.yml  dockerComposeTerraform.sh  go.mod  go.sum  go.work  go.work.sum  index.json  manifest.json  package-lock.json  package.json
cli/: .gitignore  LICENSE  MANIFEST.in  README.md  __main__.py  commands.py  pyproject.toml  requirements.txt
cli/cli/: __main__.py  commands.py
cli/devcli/: README.md  __main__.py  commands.py
cli/modm/: _zip_utils.py
cli/modm/arm/: __init__.py  arm_template.py  arm_template_parameter.py  bicep_template_compiler.py
cli/modm/config/: config.py
cli/modm/installer/: __init__.py  client_app_package.py  deployment_type.py  installer_package.py  installer_package_result.py  manifest.py  reserved_template_parameter.py  solution_template_type.py
cli/modm/marketplace/: __init__.py  _resources.py  application_package.py  application_package_info.py  application_package_resources.py  application_package_result.py  application_packaging_options.py  create_ui_definition.py  create_ui_definition_step.py  main_template.py  view_definition.py  (+1 more)
cli/packaging/: __init__.py  application_delivery.py  application_package.py  application_package_info.py  application_packaging_options.py  deployment_type.py  function_app_package.py  input_parameter.py  installer_package.py  main_template.py  manifest.py  zip_utils.py
cli/tests/: __init__.py  test_application_package.py  test_application_packaging_options.py  test_arm_template.py  test_azure_arm_template.py  test_bicep_template_compiler.py  test_create_ui_definition.py  test_create_ui_definition_step.py  test_function_app.py  test_installer_package.py  test_installer_version.py  test_main_template.py  test_main_template_finalizer.py  test_manifest.py  test_reserved_template_parameter.py  test_terraform_file.py  test_variable_types.py  test_zip_utils.py
sdks/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
(+1171 files in other folders)
